--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,7 @@ sysinfo.txt
 # Builds
 *.apk
 *.unitypackage
+Cow Quest - God Slayer/Library/metadata/00/00000000000000005100000000000000
+Cow Quest - God Slayer/Library/metadata/00/00000000000000005100000000000000
+Cow Quest - God Slayer/Library/metadata/00/00000000000000008000000000000000
+Cow Quest - God Slayer/Library/metadata/00/00000000000000005100000000000000
